--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-
+    <div class="progress-bar-container">
+        <label for="progress-bar">Loading...</label>
+        <progress id = "progress-bar" value = "0" max = "100"></progress>
+    
+    </div>
     <div class="section" id="p0">
         <div class="content-fit">
             
