--- a/index.html
+++ b/index.html
@@ -51,21 +51,20 @@
 
             <div class="des">
                 <div class="title">Meet Martin</div>
-                <p>Have you ever wondered what a dog truly thinks about? 
-                    What musings they’d share if they could speak? 
-                    In Downward Dog, director Michael Killen opens a window 
-                    into these unspoken thoughts through Martin, a devoted 
-                    and curious stay-at-home dog who ponders the mysteries 
-                    of life. Through Martin’s eyes, we glimpse the beauty, 
-                    humor, and poignancy of everyday moments—particularly his 
-                    confusion and concern as his beloved owner, Nan, becomes 
-                    increasingly distant due to her demanding job. With a touch 
-                    of whimsy and a dose of philosophy, Martin embarks on an 
-                    inward journey of self-discovery, offering viewers an 
-                    emotional experience that’s both introspective and 
-                    heartwarming. Prepare to be swept into Martin’s world as 
-                    he explores the big questions with the sincerity only a dog 
-                    could bring!
+                <p>Have you ever wondered what goes on in the mind of a dog? 
+                    What would they think about everyday?  Or what they would say 
+                    to you if they could speak? In Downward Dog, director Michael 
+                    Killen opens a window to these hypothetical questions through 
+                    Martin, a devoted and curious stay-at-home dog who ponders the 
+                    mysteries of life. Through Martin’s eyes, we glimpse the beauty, 
+                    humor, and sorrows of everyday life. Recently, Martin has become 
+                    concerned with his beloved owner, Nan. Who has become distant due 
+                    to her increasing workload. With a touch of whimsy and a dose of 
+                    philosophy, Martin embarks on a journey of self-discovery, offering 
+                    viewers an emotional experience that’s both introspective and 
+                    heartwarming. Prepare to be swept into Martin’s world as he explores 
+                    the essence of life with the sincerity only a dog could bring!
+
                 </p>
             </div>
         </div>
@@ -79,14 +78,16 @@
             <div class="number">01</div>
             <div class="des">
                 <div class="title">Friendship</div>
-                <p>Balancing friendship dynamics is often a delicate act. We instinctively assign 
-                    value to those around us, shaping how we feel and respond to each relationship. 
-                    In this chapter, Martin reflects on his struggles to find equilibrium with Nan. 
-                    Although he cares deeply for her, he senses a lack of reciprocity that leaves 
+                <p>Balancing friendship dynamics is often a delicate act. It is rooted 
+                    in human nature that we instinctively assign value to those around 
+                    us, shaping how we feel and respond to each relationship. In this 
+                    chapter, Martin reflects on his struggles to find equilibrium with Nan. 
+                    Although he cares deeply for her, he feels a lack of reciprocity that leaves 
                     him feeling undervalued. Martin sees himself as a “people pleaser,” often too 
-                    hesitant to assert his needs or feelings, especially when he feels Nan overlooks 
-                    them. As he wrestles with this imbalance, he contemplates ways to capture her 
-                    attention, hoping to restore a sense of mutual acknowledgment in their bond.
+                    hesitant to assert his needs or feelings. This tampers with his dynamic with Nan,
+                    especially when he feels Nan overlooks them. As he wrestles with this imbalance, 
+                    he contemplates ways to capture her attention, hoping to restore a sense of 
+                    mutual dependency in their relationship.
                 </p>
             </div>
         </div>
@@ -102,13 +103,13 @@
                 <div class="title">Walking</div>
                 <p>We’ve all experienced loneliness at some point. In this chapter, Martin 
                     opens up about his feelings of isolation. With Nan dedicating more time 
-                    to her studies, their moments together have become rare, leaving Martin 
+                    to her studies, their moments together have become sparse, leaving Martin 
                     feeling overlooked. When a close friend drifts away to follow a different 
                     path, it can sting, as if the connection you held dear was simply a passing 
                     interest to them. Martin wrestles with guilt for these thoughts, knowing 
                     everyone deserves to pursue their own passions, yet the ache of loneliness 
-                    and a lingering sense of abandonment continue to shadow him as he navigates 
-                    these complex emotions.
+                    and the lingering sense of abandonment continue to deteriorate his mind as 
+                    he navigates these complex emotions.
                 </p>
                 
             </div>
