--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
             <div class="des">
                 <div class="title">Meet Martin</div>
                 <p>Have you ever wondered what goes on in the mind of a dog? 
-                    What would they think about everyday?  Or what they would say 
+                    What would they think about every day?  Or what they would say 
                     to you if they could speak? In Downward Dog, director Michael 
                     Killen opens a window to these hypothetical questions through 
                     Martin, a devoted and curious stay-at-home dog who ponders the 
                     mysteries of life. Through Martin’s eyes, we glimpse the beauty, 
                     humor, and sorrows of everyday life. Recently, Martin has become 
-                    concerned with his beloved owner, Nan. Who has become distant due 
+                    concerned with his beloved owner, Nan, who has become distant due 
                     to her increasing workload. With a touch of whimsy and a dose of 
                     philosophy, Martin embarks on a journey of self-discovery, offering 
                     viewers an emotional experience that’s both introspective and 
