--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     path, it can sting, as if the connection you held dear was simply a passing 
                     interest to them. Martin wrestles with guilt for these thoughts, knowing 
                     everyone deserves to pursue their own passions, yet the ache of loneliness 
-                    and the lingering sense of abandonment continue to deteriorate his mind as 
+                    and the lingering sense of abandonment continues to deteriorate his mind as 
                     he navigates these complex emotions.
                 </p>
                 
